<resources>
    <string name="app_name">SegurancaBelica</string>
    <string name="login">Login</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="posto_gradua_o">Posto/Graduação</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="token">Token</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string-array name="postos">
        <item>Posto/Graduação</item>
        <item>Soldado</item>
        <item>Cabo</item>
        <item>3°SGT</item>
        <item>2°SGT</item>
        <item>1°SGT</item>
        <item>Subtenente</item>
        <item>AspOf</item>
        <item>2°Tenente</item>
        <item>1°Tenente</item>
        <item>Capitão</item>
        <item>Major</item>
        <item>Tenente-Coronel</item>
        <item>Coronel</item>
    </string-array>
</resources>
